[package]
name = "pathfind"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
pathfinding = "2.0"
rayon="*"
dists = "*"
dinotree = "*"
dinotree_alg="*"
duckduckgeo="*"
rand="*"
more-asserts="*"
axgeom="*"
line_drawing = "0.8.0"


[patch.crates-io]
duckduckgeo = {path="../duckduckgeo"}
axgeom = {path="../axgeom"}