[package]
name = "pathfind"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
pathfinding = "2.0"
rayon="*"
dists = "*"
dinotree = "*"
#egaku2d = "*"
egaku2d={path="../egaku2d"}
dinotree_alg={path="../dinotree_alg"}
duckduckgeo={path="../duckduckgeo"}
rand="*"
more-asserts="*"
axgeom="*"
ordered-float = "1.0.2"
seq_impulse = {path="../seq_impulse"}